--- a/InventtManage/InventtManage.csproj
+++ b/InventtManage/InventtManage.csproj
@@ -68,6 +68,18 @@
     <Compile Include="1.Splashh.Designer.cs">
       <DependentUpon>1.Splashh.cs</DependentUpon>
     </Compile>
+    <Compile Include="Categories.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Categories.Designer.cs">
+      <DependentUpon>Categories.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CategoryList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CategoryList.Designer.cs">
+      <DependentUpon>CategoryList.cs</DependentUpon>
+    </Compile>
     <Compile Include="CustomButtons.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -114,6 +126,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="2.Sign in.resx">
       <DependentUpon>2.Sign in.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Categories.resx">
+      <DependentUpon>Categories.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CategoryList.resx">
+      <DependentUpon>CategoryList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CustomButtons.resx">
       <DependentUpon>CustomButtons.cs</DependentUpon>
@@ -233,6 +251,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\a5f386cb-db8a-4306-9ce0-df64fe52e751.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\opened_folder_80px.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
